--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-body{
-	
+body {
 }
 
-
-.jumbotron{
-	padding-top: 5rem;
-	background-color: #e2edff;
+.jumbotron {
+  padding-top: 5rem;
+  background-color: #e2edff;
 }
 #projects {
-background-color: #e2edff;
-
+  background-color: #e2edff;
 }
-section{
-	padding-top: 5rem;
+section {
+  padding-top: 5rem;
+}
+.gallery-img {
+  width: 100%;
+}
+#gallery .row > * {
+  padding: 0;
 }
